<resources>
    <string name="app_name">FastRoute</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="login_or_email">Login or email</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Map</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="select_a_category">Select a category</string>
    <string name="relaxation">Relaxation</string>
    <string name="health">Health</string>
    <string name="to_eat">To eat</string>
    <string name="save">SAVE</string>
    <string name="shopping">Shopping</string>
    <string name="money">Money</string>
    <string name="sport">Sport</string>
    <string name="entertainment">Entertainment</string>
    <string name="car">Car</string>
    <string name="select_destinations">Select destinations</string>
    <string name="the_park">The park</string>
    <string name="plage">Plage</string>
    <string name="hospital">Hospital</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="dentistry">Dentistry</string>
    <string name="cafe">Cafe</string>
    <string name="bakery">Bakery</string>
    <string name="supermarket">Supermarket</string>
    <string name="mall">Mall</string>
    <string name="music_store">Music store</string>
    <string name="electronics_store">Electronics store</string>
    <string name="clothing_store">Clothing store</string>
    <string name="household_store">Household store</string>
    <string name="vape_shop">Vape shop</string>
    <string name="atm">ATM</string>
    <string name="bank">Bank</string>
    <string name="wc">WC</string>
    <string name="railway_station">Railway station</string>
    <string name="registration">Registration</string>
    <string name="go">GO</string>
    <string name="profile_setting">Profile setting</string>
    <string name="choose_a_place">Choose a place</string>
    <string name="close">Close</string>
    <string name="add">Add</string>
    <string name="change_profile">Change Profile</string>
    <string name="exit">Exit</string>
</resources>