<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.map.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.map.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.map.ui.slideshow.SlideshowFragment"
        android:label="@string/change_profile"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:name="com.example.map.MapFragment"
        android:id="@+id/nav_exit"
        android:label="Exit"
        tools:layout="@layout/category_inf"/>

</navigation>