<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/StartLogOrEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="78dp"
        android:ems="10"
        android:hint="@string/login_or_email"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/StartPas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StartLogOrEmail"
        android:autofillHints="" />

    <Button
        android:id="@+id/StartRegBtn"
        android:layout_width="132dp"
        android:layout_height="55dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="90dp"
        android:text="@string/registration"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StartPas" />

    <Button
        android:id="@+id/StartLogBtn"
        android:layout_width="132dp"
        android:layout_height="55dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="34dp"
        android:text="@string/login"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StartPas" />

</androidx.constraintlayout.widget.ConstraintLayout>