<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_bg">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/SelectText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/choose_a_place"
        android:textColor="#35A6D3"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="9dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cardSpace8"
                android:layout_width="match_parent"
                android:layout_height="9dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/AddCardATM"
                android:layout_width="match_parent"
                android:layout_height="58dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/Space"
                        android:layout_width="11dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/Icon"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="TODO"
                        android:foreground="@drawable/atm_image" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/NameOfCategory"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/atm"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/CardSpace"
                android:layout_width="match_parent"
                android:layout_height="9dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/AddCardBank"
                android:layout_width="match_parent"
                android:layout_height="58dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/Space16"
                        android:layout_width="11dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/IconPlage"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="TODO"
                        android:foreground="@drawable/bank_build_image" />

                    <TextView
                        android:id="@+id/textView68"
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/NameOfPlage"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/bank"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/cardSpace7"
                android:layout_width="match_parent"
                android:layout_height="9dp" />


        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/AddsaveSettingsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/close" />

</LinearLayout>