<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_bg">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/SelectText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/select_destinations"
        android:textColor="#35A6D3"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="9dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cardSpace8"
                android:layout_width="match_parent"
                android:layout_height="9dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/CardHospitals"
                android:layout_width="match_parent"
                android:layout_height="58dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/Space"
                        android:layout_width="11dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/Icon"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="TODO"
                        android:foreground="@drawable/health_image" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/NameOfHospitals"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/hospital"
                        android:textSize="24sp" />

                    <Switch
                        android:id="@+id/switch2"
                        android:layout_width="93dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="3"
                        android:textColor="#FFFFFF" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/CardSpace"
                android:layout_width="match_parent"
                android:layout_height="9dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/CardDentistry"
                android:layout_width="match_parent"
                android:layout_height="58dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/Space18"
                        android:layout_width="11dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/IconTeeth"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="TODO"
                        android:foreground="@drawable/teeth_image" />

                    <TextView
                        android:id="@+id/textView58"
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/NameDentistry"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/dentistry"
                        android:textSize="24sp" />

                    <Switch
                        android:id="@+id/switch6"
                        android:layout_width="93dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="4"
                        android:textColor="#FFFFFF" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/cardSpace7"
                android:layout_width="match_parent"
                android:layout_height="9dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/CardPharmacy"
                android:layout_width="match_parent"
                android:layout_height="58dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/Space16"
                        android:layout_width="11dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/IconPlage"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="TODO"
                        android:foreground="@drawable/pharmacy_image" />

                    <TextView
                        android:id="@+id/textView68"
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/NameOfPharmacy"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/pharmacy"
                        android:textSize="24sp" />

                    <Switch
                        android:id="@+id/switch1"
                        android:layout_width="93dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="5"
                        android:textColor="#FFFFFF" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/cardSpace9"
                android:layout_width="match_parent"
                android:layout_height="9dp" />


        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/saveSettingsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/save" />

</LinearLayout>